find_package(Doxygen REQUIRED)

file(
	GLOB_RECURSE CKV_FILE_PARSER_SOURCE_FILES
	${CMAKE_SOURCE_DIR}/src/*.[hc]pp ${CMAKE_SOURCE_DIR}/src/*.[hc]pp.in
)

list(
	APPEND CKV_FILE_PARSER_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
	${CMAKE_CURRENT_SOURCE_DIR}/logo.png
)

set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/src)
set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/docs/doxygen)
set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/html/index.html)
set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

file(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})

add_custom_command(
	OUTPUT ${DOXYGEN_INDEX_FILE}
	DEPENDS ${CKV_FILE_PARSER_SOURCE_FILES}
    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
    MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
    COMMENT "Generating docs for ckv_file_parser with doxygen"
)

add_custom_target(Doxygen ALL DEPENDS ${DOXYGEN_INDEX_FILE})
